--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -3194,7 +3194,7 @@ for (i in seq_along(predictors_olsbp_new_list)) {
   model_pois <- mod_final_pois_olsbp_list[[i]]
   model_zip <- mod_final_zip_olsbp_list[[i]]
   
-  print(paste("Model selection", spec, "(Oostelijke leemstreek - prop sb)"))
+  print(paste("Model selection", spec, "(Oostelijke leemstreek - sbp)"))
   
   # Comparison among models
   comparisons <- loo_compare(model_pois, model_zip,
@@ -3211,9 +3211,9 @@ for (i in seq_along(predictors_olsbp_new_list)) {
     print()
   
   p1 <- pp_check(model_pois, type = "bars", ndraws = 100) +
-    ggtitle(paste("Poisson model", spec, "(Oostelijke leemstreek - prop sb)"))
+    ggtitle(paste("Poisson model", spec, "(Oostelijke leemstreek - sbp)"))
   p2 <- pp_check(model_zip, type = "bars", ndraws = 100) +
-    ggtitle(paste("ZIP model", spec, "(Oostelijke leemstreek - prop sb)"))
+    ggtitle(paste("ZIP model", spec, "(Oostelijke leemstreek - sbp)"))
   print(p1)
   print(p2)
 }
@@ -3222,7 +3222,14 @@ for (i in seq_along(predictors_olsbp_new_list)) {
 
 ```{r}
 mod_final_olsbp_list <- list(
-  ...
+  mod_final_zip_olsbp_list$Geelgors,
+  mod_final_pois_olsbp_list$GeleKwikstaart,
+  mod_final_pois_olsbp_list$Grasmus,
+  mod_final_zip_olsbp_list$Kneu,
+  mod_final_zip_olsbp_list$Kwartel,
+  mod_final_pois_olsbp_list$Torenvalk,
+  mod_final_pois_olsbp_list$Veldleeuwerik,
+  mod_final_pois_olsbp_list$WitteKwikstaart
   )
 names(mod_final_olsbp_list) <- names(predictors_olsbp_new_list)
 ```
@@ -3242,7 +3249,7 @@ for (i in seq_along(mod_final_olsbp_list)) {
   # Model fit
   print(paste("Model fit", spec, "(Oostelijke leemstreek - sbp)"))
   pp_check(model, type = "bars_grouped", ndraws = 100, 
-           group = "area_prop_sb_cat",
+           group = "sbp",
            facet_args = list(ncol = 1, scales = "free_y")) %>%
     print()
 }
@@ -3266,117 +3273,6 @@ for (i in seq_along(mod_final_olsbp_list)) {
     print(p)
   }
 }
-```
-
-We zijn vooral geïnteresseerd in het verschil tussen soortbeschermingsplannen en nulbeleid.
-Dit kunnen we proportioneel uitdrukken.
-
-```{r}
-get_effects <- function(df, ref = 0,
-                        min_threshold = -0.2,
-                        max_threshold = 0.25) {
-  require(effectclass)
-  
-  # add effects
-  df$effect_fine <- classification(
-    lcl = df$lcl,
-    ucl = df$ucl,
-    threshold = c(min_threshold, max_threshold))
-
-  df$effect_coarse <- coarse_classification(df$effect_fine)
-  
-  # order and rename effects
-  out <- df %>%
-    mutate(
-      trend_fine = case_when(
-          effect_fine == "++" ~ "strong positief effect",
-          effect_fine == "+" ~ "positief effect",
-          effect_fine == "+~" ~ "gematigd positief effect",
-          effect_fine == "~" ~ "stabiel",
-          effect_fine == "-" ~ "negatief effect",
-          effect_fine == "-~" ~ "gematigd negatief effect",
-          effect_fine == "--" ~ "sterk negatief effect",
-          TRUE ~ "onzeker",
-      ),
-      trend_fine = factor(trend_fine,
-        levels = c(
-          "strong positief effect",
-          "positief effect",
-          "gematigd positief effect",
-          "stabiel",
-          "gematigd negatief effect",
-          "negatief effect",
-          "sterk negatief effect",
-          "onzeker"),
-        ordered = TRUE)
-    ) %>%
-    mutate(
-      trend_coarse = case_when(
-          effect_coarse == "+" ~ "positief effect",
-          effect_coarse == "-" ~ "negatief effect",
-          effect_coarse == "~" ~ "stabiel",
-          TRUE ~ "onzeker",
-      ),
-      trend_coarse = factor(trend_coarse,
-        levels = c("positief effect",
-                   "stabiel",
-                   "negatief effect",
-                   "onzeker"),
-        ordered = TRUE)
-    ) %>%
-    mutate(
-      trend_simple = case_when(
-        lcl > ref ~ "positief effect",
-        ucl < ref ~ "negatief effect",
-        TRUE ~ "stabiel of onzeker effect"
-        ),
-      trend_simple = factor(trend_simple,
-        levels = c("positief effect",
-                   "negatief effect",
-                   "stabiel of onzeker effect"),
-        ordered = TRUE)
-    ) %>%
-    select(-c(effect_fine, effect_coarse))
-}
-
-create_draws_df <- function(model, seed = 123) {
-  df <- model %>%
-    spread_draws(`b_area_prop_sb_cat.*`, regex = TRUE, seed = seed) %>%
-    select(starts_with("b_area_prop_sb_cat")) %>%
-    pivot_longer(cols = everything(), names_to = "area_prop_sb_cat_long") %>%
-    mutate(area_prop_sb_cat = gsub("b_area_prop_sb_cat", "",
-                                   area_prop_sb_cat_long),
-           value_log = value,
-           value = exp(value) - 1) %>%
-    select(area_prop_sb_cat, value_log, value) %>%
-    group_by(area_prop_sb_cat) %>%
-    mutate(median_log = median(value_log),
-           lcl_log = quantile(value_log, 0.05),
-           ucl_log = quantile(value_log, 0.95)) %>%
-    mutate(median = median(value),
-           lcl = quantile(value, 0.05),
-           ucl = quantile(value, 0.95)) %>%
-    ungroup() %>%
-    mutate(.point = "median",
-           .width = 0.95 - 0.05)
-  
-  df_ordered <- df %>%
-    mutate(area_prop_sb_cat = factor(area_prop_sb_cat,
-                                     levels = c("nulbeleid",
-                                                "laagbeleid",
-                                                "middellaagbeleid",
-                                                "middelhoogbeleid",
-                                                "hoogbeleid"),
-                                      ordered = TRUE))
-  
-  out <- get_effects(df_ordered)
-}
-```
-
-
-```{r}
-# get posterior draws for parameters of interest
-draws_olsbp_list <- lapply(mod_final_olsbp_list, create_draws_df)
 ```
 
 #### area prop sb (categorised)
