--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -1205,8 +1205,8 @@ Nog een optie is de variabele sqrt transformeren.
 We besluiten op te delen volgens de agri-environment schemes (AES) classificatie besproken in @sharps2023.
 
 ```{r}
-tibble(beleid = c("nul", "laag", "middel", "hoog"),
-       prop_area_sb = c("0", "<0.04", "0.04-0.1", ">0.1")) %>%
+tibble(beleid = c("nul", "laag", "middellaag", "middelhoog", "hoog"),
+       prop_area_sb = c("0", "<0.04", "0.04-0.07", "0.07-0.1", ">0.1")) %>%
   kable()
 ```
 
@@ -3586,7 +3586,7 @@ index_labels <- function(x) {
 
 index_breaks <- function() {
   z <- 1 - c(
-    4 / 5, 3 / 4, 2 / 3, 1 / 2, 1 / 3, 1 / 5
+    5 / 6, 4 / 5, 3 / 4, 2 / 3, 1 / 2, 1 / 3, 1 / 5
   )
   z <- log(sort(z))
   c(z, 0, -z)
@@ -3617,11 +3617,22 @@ min_threshold <- log(0.8)
 max_threshold <- log(1.25)
 ```
 
-
 ```{r}
+theme_set(theme_inbo(transparent = TRUE))
+
+area_prop_cats <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "middellaagbeleid",
+                       "middelhoogbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.04", "0.04-0.07", "0.07-0.1", ">0.1")
+  ) %>%
+  rowid_to_column("order")
+
 for (spec in names(draws_olpropsb_list)) {
   p <- draws_olpropsb_list[[spec]] %>%
-    ggplot(aes(x = area_prop_sb_cat)) +
+    left_join(area_prop_cats, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
       geom_violin(aes(y = value_log, fill = trend_coarse),
                   colour = alpha("white", 0)) +
       geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
