--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -3021,7 +3021,7 @@ size_decided_ol_total_list
 
 ### De Moeren 2018-2023
 
-```{r}
+```{r, eval=FALSE}
 cvvs_dm_total_list <- vector("list", length = length(refmod_dm_total_list))
 cvvs_dm_total_names <- vector(length = length(refmod_dm_total_list))
 
@@ -3051,7 +3051,7 @@ for (i in seq_along(refmod_dm_total_list)) {
 names(cvvs_dm_total_list) <- cvvs_dm_total_names
 ```
 
-```{r}
+```{r, eval=FALSE}
 for (i in seq_along(cvvs_dm_total_list)) {
   title <- names(cvvs_dm_total_list)[i]
   if (!title == "FALSE") {
@@ -3078,7 +3078,7 @@ for (i in seq_along(cvvs_dm_total_list)) {
 
 Choose model sizes.
 
-```{r}
+```{r, eval=FALSE}
 size_decided_dm_total_list <- list(8, 5, 8, 2, 10, 9, 3)
 size_decided_dm_total_list
 ```
@@ -3809,13 +3809,8 @@ for (i in seq_along(predictors_ol_total_list)) {
 
 ```{r}
 mod_final_oltotal_list <- list(
-  mod_final_zip_oltotal_list$Geelgors,
-  mod_final_pois_oltotal_list$GeleKwikstaart,
-  mod_final_pois_oltotal_list$Grasmus,
-  mod_final_zip_oltotal_list$Kievit,
   mod_final_pois_oltotal_list$Kneu,
   mod_final_pois_oltotal_list$Kwartel,
-  mod_final_pois_oltotal_list$Torenvalk,
   mod_final_pois_oltotal_list$Veldleeuwerik,
   mod_final_pois_oltotal_list$WitteKwikstaart
   )
@@ -3836,9 +3831,7 @@ for (i in seq_along(mod_final_oltotal_list)) {
   
   # Model fit
   print(paste("Model fit", spec, "(Oostelijke leemstreek - 2018-2023)"))
-  pp_check(model, type = "bars_grouped", ndraws = 100, 
-           group = "area_prop_sb_cat",
-           facet_args = list(ncol = 1, scales = "free_y")) %>%
+  pp_check(model, type = "bars", ndraws = 100) %>%
     print()
 }
 ```
